Displays contact list

--- a/app/src/main/res/layout/activity_find_user.xml
+++ b/app/src/main/res/layout/activity_find_user.xml
@@ -8,10 +8,9 @@
     tools:context=".FindUserActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout-width="match_parent"
-        android:layout-height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/userListRecyclerView"
         android:scrollbars="vertical"/>
-
 
 </LinearLayout>
